--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('img/background.jpg') no-repeat center center fixed;
+  background: url('img/pexels-negativespace-169573.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
